OAK-11278: remove ImmutableMap.of - multiple argument case - oak-segment-tar